--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@ body{
 <meta http-equiv="refresh" content="3">
 </head>
 <body bgcolor="dimgrey" background="img/background.png" style="text-align: center;">
+
+<table>
+	<tr>
+		<td align="center">Home</td>
+		<td>My Resume</td>
+		<td>My Favourite</td>
+	</tr>
+</table>
+
 <h1>Welcome to my homepage</h1>
 <h2>Ezzat</h2>
 <img src="img/picture.png" width="250" height="300" border="5px solid black">
